# llm_rs2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Cargo.toml  PROJECT_CONTEXT.md  README.md  android.source  build_log.txt  build_log_2.txt  devices.toml  hosts.toml.example  policy_config.toml
crates/qnn_oppkg/: Cargo.toml  build.rs
crates/qnn_oppkg/src/: args.rs  interface.rs  lib.rs  op_impl.rs  registry.rs  static_info.rs
crates/qnn_oppkg/tests/: ops_metadata.rs  spec.rs
crates/technique-api/: Cargo.toml
crates/technique-api/src/: lib.rs
crates/techniques/caote/: Cargo.toml
crates/techniques/example-backend-cap/: Cargo.toml
crates/techniques/example-bundle/: Cargo.toml
crates/techniques/example-keep-recent/: Cargo.toml
crates/techniques/example-kv-format/: Cargo.toml
crates/techniques/example-multi-format/: Cargo.toml
crates/techniques/example-no-export/: Cargo.toml
crates/techniques/example-rollback/: Cargo.toml
crates/techniques/quest/: Cargo.toml
crates/techniques/synth-q4-format/: Cargo.toml
engine/: Cargo.toml  build.rs
engine/kernels/: attention_scores.cl  cvt_q4_0_noshuffle_fused.cl  flash_attn_f16.cl  flash_attn_f32.cl  flash_attn_f32_f16.cl  flash_attn_q1_reduce.cl  gemv_noshuffle_q4_0.cl  kivi_attn.cl  kivi_q2.cl  mul_mm_q4_0_f32_l4_lm.cl  mul_mv_f16_f32.cl  mul_mv_f16_f32_1row_simple.cl  mul_mv_f16_f32_l4.cl  quantize_q4_0.cl  score_reduce.cl  simple_ops.cl
engine/kernels/fallback/: mul_mv_f16_f32_nosub.cl  mul_mv_f32_f32_nosub.cl  mul_mv_q4_0_f32_nosub.cl  simple_ops_nosub.cl
engine/legacy/: generate.rs
engine/microbench/: ahb_iocoherent.rs  async_write.rs  flash_attn.rs  h2d_baseline.rs  host_flags.rs  htp_add.rs  htp_add_f16.rs  htp_batch_dispatch.rs  htp_fastrpc_dryrun.rs  htp_flash_attn_ext.rs  htp_get_rows.rs  htp_matmul.rs  htp_matmul_correctness.rs  htp_matmul_f16.rs  htp_mul.rs  htp_mul_f16.rs  htp_rmsnorm.rs  htp_rope.rs  htp_silu.rs  htp_silu_f16.rs  htp_softmax.rs  micro_bench.rs  neon_op_matrix.rs  opencl_op_matrix.rs  oppkg_chain_amortize.rs  oppkg_gemv_vs_baseline.rs  oppkg_mixed_layer.rs  ops.rs  probe_inference_loop.rs  qnn_28layer_tbt.rs  qnn_oppkg_chain5_correct.rs  qnn_oppkg_chain_correct.rs  qnn_oppkg_flash_attn_correct.rs  qnn_oppkg_flash_attn_qwen.rs  qnn_oppkg_kv_scatter_correct.rs  qnn_oppkg_matmul_correct.rs  qnn_oppkg_matmul_q40_correct.rs  qnn_oppkg_reduced3_correct.rs  qnn_oppkg_rmsnorm_correct.rs  qnn_oppkg_rope_correct.rs  (+18 more)
engine/shaders/: busy.comp  busy.spv  simple_add.comp  simple_add.spv
engine/src/: action_diag_helper.rs  action_result.rs  auf.rs  auf_dtype_convert.rs  backend.rs  buffer.rs  capability.rs  cpu_kernels.rs  experiment.rs  format.rs  hardware.rs  hybrid_attention.rs  inference.rs  instrument.rs  kv.rs  kv_cache_ops.rs  layer_boundary_hook.rs  layers.rs  lib.rs  memory.rs  model_config.rs  models.rs  op_kind.rs  partition_workspace.rs  phase_hook.rs  pipeline.rs  preload_access.rs  pressure.rs  qcf_collector.rs  qcf_computer.rs  qcf_types.rs  quant.rs  resilience.rs  runtime_resources_access.rs  secondary.rs  session.rs  stages.rs  tensor.rs  weight.rs  yield_policy.rs
engine/src/auf/: dtype_convert.rs  error.rs  header.rs  meta.rs  mod.rs  q4_0_soa.rs  reader.rs  section.rs  source_hash.rs  stripper.rs  tensor_index.rs  tokenizer.rs  writer.rs
engine/src/backend/: cuda_pc.rs  htp_fastrpc.rs  mod.rs  opencl.rs
engine/src/bin_helpers/: stage_host_ptr_helpers.rs
engine/src/buffer/: auf_view_buffer.rs  borrowed_mmap_buffer.rs  cl_wrapped_buffer.rs  cuda_buffer.rs  cuda_mmap_alias_buffer.rs  madviseable_gpu_buffer.rs  mmap_buffer.rs  mod.rs  opaque.rs  rpcmem_alias_buffer.rs  shared_buffer.rs  slice.rs  slice_buffer.rs  unified_buffer.rs
engine/src/capability/: dynamic_backend_registry.rs  gpu_score.rs  kivi_attention.rs
engine/src/core/: attention_scores.rs  backend.rs  buffer.rs  cache_manager.rs  chat_ipc.rs  chat_template.rs  events.rs  gpu_yield.rs  kivi_cache.rs  kv_cache.rs  kv_migrate.rs  math_utils.rs  memory.rs  mod.rs  quant.rs  rss_trace.rs  sampling.rs  speculative.rs  svd_cache.rs  svd_math.rs  sys_monitor.rs  tensor.rs  thread_pool.rs
engine/src/eval/: eval_loop.rs  eviction_hook.rs  hook.rs  kivi_hook.rs  mod.rs  output.rs  qcf_helpers.rs
engine/src/format/: builtin_kv_formats.rs  dtype_layout.rs  dynamic_format_registry.rs  kv_cache_format.rs  kv_snapshot.rs  selective_read.rs  weight_format.rs
engine/src/inference/: attention_scores.rs  mod.rs  query_stats.rs  sampling.rs  skip_config.rs  speculative.rs
engine/src/kv/: cache_manager.rs  d2o_handler.rs  eviction.rs  eviction_handler.rs  kivi_cache.rs  kivi_format.rs  kv_migrate.rs  offload.rs  offload_format.rs  quantize_handler.rs  read.rs  rkv_stage.rs  standard_format.rs  swap_handler.rs  weight_swap_handler.rs
engine/src/layers/: attention.rs  hybrid_attention.rs  llama_layer.rs  mod.rs  staging_pool.rs  tensor_partition.rs  transformer_layer.rs  workspace.rs
engine/src/memory/: cuda.rs  galloc.rs  mod.rs  (+2 more)
engine/tests/: beta3_eviction_stage_equivalence.rs  beta4_command_channel.rs  beta5_pressure_driven_eviction.rs  chat_ipc.rs  chat_template.rs  demote_measure.rs  flash_attn_decode.rs  flash_attn_decode_dk128.rs  flash_attn_decode_gqa.rs  flash_attn_decode_split.rs  flash_attn_prefill_dk128.rs  flash_attn_prefill_dk256.rs  fused_norm_merge.rs  gate_c_backend_cap_dlopen.rs  gate_c_dlopen_equivalence.rs  gate_c_format_dlopen_equivalence.rs  gate_c_plugin_bundle.rs  gemma3_4b_loading.rs  spec.rs  test_action_pool.rs  test_attention_flash_decoding.rs  test_attention_online_softmax.rs  test_auf_gguf_byte_equivalence.rs  test_eviction_memory.rs  test_prefill_flash_attention.rs  test_resilience_integration.rs  test_sliding_window_validity.rs
manager/: Cargo.toml  policy_config.toml
manager/scripts/: policy_default.lua  policy_example.lua
manager/src/: action_registry.rs  channel.rs  clock.rs  config.rs  evaluator.rs  lib.rs  lua_policy.rs  main.rs  pi_controller.rs  pipeline.rs  policy.rs  selector.rs  supervisory.rs  types.rs
manager/tests/: common.rs  spec.rs
(+3552 files in other folders)
