[package]
name = "llm_rs2"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 모델 로딩
safetensors = "0.7"
memmap2 = "0.9"
half = "2.7.1"      # bf16 -> f32 변환용

# 토크나이저
# tokenizers = "0.22"
tokenizers = { version = "0.22", default-features = false, features = [
  "progressbar",
  "onig",
] }

# 유틸리티
anyhow = "1.0"
rand = "0.9"

# Cli 인터페이스
clap = { version = "4.5", features = ["derive"] }

# 병렬화
rayon = "1.11"

# log
log = "0.4"
env_logger = "0.11"

# OpenCl
ocl = { version = "0.19", optional = true }

[features]
default = ["opencl"]
opencl = ["ocl"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
