[package]
name = "llm_rs2"
version = "0.1.0"
edition = "2024"

[dependencies]
llm_shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 모델 로딩
safetensors = "0.7"
memmap2 = "0.9"
half = "2.7.1"      # bf16 -> f32 변환용

# Weight Swap: lock-free Arc snapshot
arc-swap = "1.7"

# 토크나이저
tokenizers = { version = "0.22", default-features = false, features = [
  "progressbar",
  "onig",
] }

# 유틸리티
anyhow = "1.0"
rand = "0.9"

# Cli 인터페이스
clap = { version = "4.5", features = ["derive"] }

# 병렬화
rayon = "1.11"

# 시스템
libc = "0.2"

# log
log = "0.4"
env_logger = "0.11"

# OpenCL
ocl = { version = "0.19", optional = true }

# CUDA (Jetson)
cudarc = { version = "0.19", optional = true, default-features = false, features = [
  "std", "driver", "nvrtc", "cublas", "f16", "fallback-dynamic-loading",
  "cuda-11040",
] }

# D-Bus IPC (resilience)
zbus = { version = "5", optional = true, default-features = false, features = ["blocking-api", "async-io"] }

tempfile = "3.0"

[dev-dependencies]

[features]
default = ["opencl"]
opencl = ["ocl"]
cuda = ["cudarc"]               # PC / discrete GPU version (cuda_pc/)
cuda-embedded = ["cudarc"]      # Embedded UMA version, e.g. Jetson Xavier (cuda_embedded/)
resilience = ["zbus"]
