[package]
name = "llm_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
llm_shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
zbus = { version = "5", default-features = false, features = ["blocking-api", "async-io"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "mock_manager"
path = "src/bin/mock_manager.rs"

[[bin]]
name = "mock_engine"
path = "src/bin/mock_engine.rs"
