[package]
name = "technique-api"
version = "0.1.0"
edition = "2024"
description = "ADR-0003 확장 표면 — stage 축 기법(eviction)이 엔진 코어 수정 없이 linkme 로 자기를 등록하는 가산 등록 API."

[dependencies]
# 정적 링크 자동 등록 — 링커 섹션 기반(생성자 0, panic=abort/Android 안전).
# fat-LTO --gc-sections silent drop 리스크는 engine 측 startup self-test 로 게이트(ADR-0003 §4).
linkme = "0.3"

[features]
# 동적 `.so` 경로(register_kv_*! 의 PLUGIN_*_VTABLES 기여 + export_plugin! 의 entry emit) 게이트.
# plugin cdylib 빌드만 켠다. technique-api 자체 테스트가 동적 arm 누적을 검증할 때도 사용
# (`cargo test -p technique-api --features plugin-cdylib`). 매크로의 #[cfg(feature="plugin-cdylib")] 는
# 매크로가 전개되는 crate(plugin 또는 본 crate 테스트)의 feature 로 평가된다(ADR-0010 E2).
plugin-cdylib = []
