[package]
name = "example-backend-cap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] # rlib=정적 force-link 가시성, cdylib=dlopen .so

[dependencies]
technique-api = { path = "../../technique-api" }
linkme = "0.3" # 매크로 확장이 linkme:: 경로(재노출)를 쓰므로 plugin 직접 dep 필수

[features]
plugin-cdylib = [] # cdylib C-ABI export 게이트. .so 빌드 시에만 ON. 정적 force-link 시 #[no_mangle] 충돌 차단
