[package]
name = "example-bundle"
version = "0.1.0"
edition = "2024"

[lib]
# GATE-C v3(ADR-0010 E1/E2): 한 `.so` 가 stage(register_kv_stages_v2) + format(register_kv_formats_v2)
# 양축을 동시 export 하는 번들. cdylib = dlopen `.so`.
crate-type = ["cdylib", "rlib"]

# 번들 예제 — `technique-api` + `linkme` 만 의존(엔진 force-link 안 함). 한 plugin `.so` 가 stage 1 +
# format 1 을 함께 싣는 vehicle(ADR-0010 E7: 번들 양축 등록 + Arc 공유 검증).
[dependencies]
technique-api = { path = "../../technique-api" }
linkme = "0.3"

[features]
plugin-cdylib = []
