[package]
name = "example-rollback"
version = "0.1.0"
edition = "2024"

[lib]
# GATE-C v3(ADR-0010 E7 G3): per-`.so` 원자성 롤백 vehicle. 봉투에 [q4_0(빌트인 충돌), rollback_ok]
# 2종 → try_register_format pass1 이 q4_0 충돌로 bail → rollback_ok 는 push 안 됨(부분 등록 롤백).
crate-type = ["cdylib", "rlib"]

[dependencies]
technique-api = { path = "../../technique-api" }
linkme = "0.3"

[features]
plugin-cdylib = []
