[package]
name = "synth-q4-format"
version = "0.1.0"
edition = "2024"

[lib]
# GATE-C v2(ADR-0009 D4): rlib = 정적 dep(엔진 force-link `--kv-format synth_q4` + dev-dep
# 가시성), cdylib = dlopen `.so`(`--features plugin-cdylib` 빌드 시 register_kv_format_v1 export).
crate-type = ["cdylib", "rlib"]

# 합성 KV format technique crate (ADR-0007 GATE-B) — format 축 확장 기법은 `technique-api`(확장 API)
# + `linkme`(정적 등록 매크로 확장이 `linkme::` 경로 하드코딩하므로 plugin 직접 dep 필수)에 의존한다.
# 엔진(llm_rs2) / 다른 축(stage/hardware) crate 에 의존하지 않음 = DType variant 없이 외부 crate 가
# KV_FORMATS 에 format 을 더하는 가산 확장의 증거(.so 대역).
[dependencies]
technique-api = { path = "../../technique-api" }
linkme = "0.3"

[features]
# GATE-C v2(ADR-0009 D4): cdylib C-ABI export(register_kv_format_v1) 활성화. 정적 force-link 빌드는
# OFF 로 두어 `#[no_mangle]` 심볼 충돌을 원천 차단한다. `.so` 산출 시에만 켠다.
plugin-cdylib = []
